2016-01-31  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): feat: Sort tweets by date from oldest to newest.

        * main.go (main): refactor: Logic is responsible for message
        processing is moved to the separate function.

        * anaconda.go (AnacondaTweets): refactor: move here logic related
        to fetch tweets via Anaconda library.

        * filter.go (filterTweets): refactor: move here logic related to
        email sending (should be renamed).

2015-12-28  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (tweetBody): `tweetBody` respects html entities
        for example "&lt;" to become "<".

2015-12-14  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): Loading config relative to user home directory.

2015-12-10  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): Attach images to message.

2015-12-08  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): SMTP investigation.

2015-12-02  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): Tweet body templating investigation.

2015-11-21  Danil Kutkevich  <danil@kutkevich.org>

        * cache.go (loadIds): Add `saveCache` function.

2015-11-19  Danil Kutkevich  <danil@kutkevich.org>

        * twitma.go (loadIds): Create json file if not exist.

2015-11-16  Danil Kutkevich  <danil@kutkevich.org>

        * twitma.go (twitmaConfig): Add `twitmaConfig` struct.
        * twitma.go (loadConfig): Add `loadConfig` function.
        * twitma.go (loadIds): Add `loadIds` function.

2015-11-11  Danil Kutkevich  <danil@kutkevich.org>

        * thtm.rb: Rename to twitma.rb